--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Music Web App</title>
 </head>
 <body>
-    <div class="container">
+    <div style="background-color: black;" class="container">
         <video autoplay loop plays-inline class="bgvideo">
             <source src="video/background-video.mp4" type="video/mp4">
         </video>
