--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     earum corporis culpa autem fuga nostrum cupiditate totam. Saepe deserunt blanditiis ab!</p>
             </div>
             
-            <a href="" class="listen-now">LISTEN NOW</a>
+            <a href="page2.html" class="listen-now">LISTEN NOW</a>
         </div>
         
     </div>
